--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,21 @@ div {
 h1 {
     font-size: 6vmin;
     color: #fdbb2d;
+    text-shadow: 2px 2px 2px black;
 }
 
 
-h2 {
+h3 {
+    text-decoration: underline;
 
+}
 
+p {
+    border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
+    margin-top: 0px;
 }
 
 button {
